generic h/cpp back to original files, opencv specialization moved to cv_tree h/cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ catkin_package(
 add_library(vocabulary_tree
     src/database.cpp
     src/generic_tree.cpp
+    src/cv_tree.cpp
 )
 
 install(DIRECTORY include/${PROJECT_NAME}/
